btrfs: fix inode leak on failure to add link to inode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34404,6 +34404,7 @@
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/x86-microcode-AMD-Handle-the-case-of-no-BIOS-microcode.patch
 	patches.suse/btrfs-abort-transaction-on-failure-to-add-link-to-in.patch
+	patches.suse/btrfs-fix-inode-leak-on-failure-to-add-link-to-inode.patch
 	patches.suse/btrfs-fix-race-between-logging-inode-and-checking-if.patch
 	patches.suse/btrfs-fix-race-between-setting-last_dir_index_offset.patch
 	patches.suse/btrfs-avoid-load-store-tearing-races-when-checking-i.patch
