--- a/blacklist.conf
+++ b/blacklist.conf
@@ -601,3 +601,4 @@ a001cd248ab244633c5fabe4f7c707e13fc1d1cc # selftests
 cc4d900d0d6d8dd5c41832a93ff3cfa629a78f9a # no support of stm32 console
 8278c6914306f35f32d73bdf2a918950919a0051 # too intrusive
 3ab10f83e277ba9640742cbba67b8df369591450 # too intrusive
+d2bd39c0456b75be9dfc7d774b8d021355c26ae3 # needed only for better context for 6cff20ce3b92
