--- a/series.conf
+++ b/series.conf
@@ -34974,6 +34974,7 @@
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
+	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 
 	########################################################
 	# end of sorted patches
