btrfs: tree-checker: add type and sequence check for inline backrefs (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -18272,6 +18272,7 @@
 	patches.suse/x86-microcode-Remove-the-driver-announcement-and-version.patch
 	patches.suse/x86-microcode-Rework-early-revisions-reporting.patch
 	patches.suse/media-v4l2-subdev-Fix-a-64bit-bug.patch
+	patches.suse/btrfs-tree-checker-add-type-and-sequence-check-for-i.patch
 	patches.suse/btrfs-fix-off-by-one-when-checking-chunk-map-include.patch
 	patches.suse/btrfs-make-error-messages-more-clear-when-getting-a-.patch
 	patches.suse/btrfs-fix-64bit-compat-send-ioctl-arguments-not-init.patch
