--- a/series.conf
+++ b/series.conf
@@ -24216,6 +24216,7 @@
 	patches.suse/btrfs-qgroup-correctly-model-root-qgroup-rsv-in-conv.patch
 	patches.suse/btrfs-record-delayed-inode-root-in-transaction.patch
 	patches.suse/btrfs-qgroup-convert-PREALLOC-to-PERTRANS-after-reco.patch
+	patches.suse/btrfs-make-btrfs_clear_delalloc_extent-free-delalloc.patch
 	patches.suse/btrfs-always-clear-PERTRANS-metadata-during-commit.patch
 	patches.suse/x86-bugs-Change-commas-to-semicolons-in-spectre_v2-sysfs-f.patch
 	patches.suse/x86-bhi-Add-support-for-clearing-branch-history-at-syscall.patch
