btrfs: tree-checker: validate dref root and objectid (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -27313,6 +27313,7 @@
 	patches.suse/minmax-improve-macro-expansion-and-type-checking.patch
 	patches.suse/platform-chrome-cros_ec_proto-Lock-device-when-updat.patch
 	patches.suse/perf-tool-fix-dereferencing-NULL-al-maps.patch
+	patches.suse/btrfs-tree-checker-validate-dref-root-and-objectid.patch
 	patches.suse/btrfs-fix-corruption-after-buffer-fault-in-during-di.patch
 	patches.suse/minmax-fix-up-min3-and-max3-too.patch
 	patches.suse/ethtool-rss-echo-the-context-number-back.patch
