btrfs: avoid using fixed char array size for tree names (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -27396,6 +27396,7 @@
 	patches.suse/power-supply-qcom_battmgr-return-EAGAIN-when-firmwar.patch
 	patches.suse/btrfs-fix-qgroup-reserve-leaks-in-cow_file_range.patch
 	patches.suse/btrfs-fix-double-inode-unlock-for-direct-IO-sync-wri.patch
+	patches.suse/btrfs-avoid-using-fixed-char-array-size-for-tree-nam.patch
 	patches.suse/kcov-properly-check-for-softirq-context.patch
 	patches.suse/memcg-protect-concurrent-access-to-mem_cgroup_idr.patch
 	patches.suse/padata-Fix-possible-divide-by-0-panic-in-padata_mt_h.patch
