btrfs: tree-checker: reject BTRFS_FT_UNKNOWN dir type (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -27482,6 +27482,7 @@
 	patches.suse/s390-uv-Panic-for-set-and-remove-shared-access-UVC-errors.patch
 	patches.suse/KVM-x86-Make-x2APIC-ID-100-readonly.patch
 	patches.suse/btrfs-check-delayed-refs-when-we-re-checking-if-a-re.patch
+	patches.suse/btrfs-tree-checker-reject-BTRFS_FT_UNKNOWN-dir-type.patch
 	patches.suse/btrfs-send-allow-cloning-non-aligned-extent-if-it-en.patch
 	patches.suse/media-Revert-media-dvb-usb-Fix-unexpected-infinite-l.patch
 	patches.suse/usbnet-ipheth-race-between-ipheth_close-and-error-ha.patch
