--- a/series.conf
+++ b/series.conf
@@ -27554,6 +27554,7 @@
 	patches.suse/mm-migrate-fix-deadlock-in-migrate_pages_batch-on-la.patch
 	patches.suse/fuse-Initialize-beyond-EOF-page-contents-before-setti.patch
 	patches.suse/btrfs-update-target-inode-s-ctime-on-unlink.patch
+	patches.suse/btrfs-tree-checker-add-dev-extent-item-checks.patch
 	patches.suse/thunderbolt-Mark-XDomain-as-unplugged-when-router-is.patch
 	patches.suse/Revert-usb-typec-tcpm-clear-pd_event-queue-in-PORT_R.patch
 	patches.suse/xhci-Fix-Panther-point-NULL-pointer-deref-at-full-sp.patch
