btrfs: run btrfs_error_commit_super() early (git-fix).

--- a/series.conf
+++ b/series.conf
@@ -31900,6 +31900,7 @@
 	patches.suse/btrfs-always-fallback-to-buffered-write-if-the-inode.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-d.patch
+	patches.suse/btrfs-run-btrfs_error_commit_super-early.patch
 	patches.suse/btrfs-return-a-btrfs_inode-from-btrfs_iget_logging.patch
 	patches.suse/btrfs-return-a-btrfs_inode-from-read_one_inode.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
