--- a/series.conf
+++ b/series.conf
@@ -32445,6 +32445,7 @@
 	patches.suse/tracing-Fix-filter-string-testing.patch
 	patches.suse/i2c-cros-ec-tunnel-defer-probe-if-parent-EC-is-not-p.patch
 	patches.suse/ima-process_measurement-needlessly-takes-inode_lock-.patch
+	patches.suse/btrfs-avoid-page_lockend-underflow-in-btrfs_punch_ho.patch
 	patches.suse/virtgpu-don-t-reset-on-shutdown.patch
 	patches.suse/virtio_console-fix-missing-byte-order-handling-for-c.patch
 	patches.suse/vhost-scsi-protect-vq-log_used-with-vq-mutex.patch
