--- a/series.conf
+++ b/series.conf
@@ -32526,6 +32526,7 @@
 	patches.suse/platform-x86-amd-pmc-Require-at-least-2.5-seconds-be.patch
 	patches.suse/platform-x86-intel-uncore-freq-Fix-missing-uncore-sy.patch
 	patches.suse/mmc-renesas_sdhi-Fix-error-handling-in-renesas_sdhi_.patch
+	patches.suse/btrfs-fix-COW-handling-in-run_delalloc_nocow.patch
 	patches.suse/btrfs-adjust-subpage-bit-start-based-on-sectorsize.patch
 	patches.suse/wifi-plfxlc-Remove-erroneous-assert-in-plfxlc_mac_re.patch
 	patches.suse/wifi-brcm80211-fmac-Add-error-handling-for-brcmf_usb.patch
