--- a/series.conf
+++ b/series.conf
@@ -28397,6 +28397,7 @@
 	patches.suse/x86-do-the-user-address-masking-outside-the-user-access-ar.patch
 	patches.suse/x86-make-the-masked_user_access_begin-macro-use-its-argume.patch
 	patches.suse/btrfs-fix-race-setting-file-private-on-concurrent-ls.patch
+	patches.suse/btrfs-tree-checker-fix-the-wrong-output-of-data-back.patch
 	patches.suse/nfsd-add-list_head-nf_gc-to-struct-nfsd_file.patch
 	patches.suse/nfsd-remove-unneeded-EEXIST-error-check-in-nfsd_do_file_acquire.patch
 	patches.suse/nfsd-fix-refcount-leak-when-file-is-unhashed-after-being-found.patch
