--- a/series.conf
+++ b/series.conf
@@ -55083,6 +55083,7 @@
 	patches.suse/KVM-VMX-Extract-checking-of-guest-s-DEBUGCTL-into-he.patch
 	patches.suse/KVM-nVMX-Check-vmcs12-guest_ia32_debugctl-on-nested-.patch
 	patches.suse/KVM-VMX-Wrap-all-accesses-to-IA32_DEBUGCTL-with-gett.patch
+	patches.suse/KVM-VMX-Preserve-host-s-DEBUGCTLMSR_FREEZE_IN_SMM-wh.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-SVM-Pass-through-GHCB-MSR-if-and-only-if-VM-is-a.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
