KVM: x86: Add helper to retrieve current value of user return MSR (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56133,6 +56133,7 @@
 	patches.suse/KVM-SEV-Rename-kvm_ghcb_get_sw_exit_code-to-kvm_get_.patch
 	patches.suse/KVM-SEV-Read-save-fields-from-GHCB-exactly-once.patch
 	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
+	patches.suse/KVM-x86-Add-helper-to-retrieve-current-value-of-user.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
 	patches.suse/NFSD-Minor-cleanup-in-layoutcommit-processing.patch
