KVM: SVM: Re-load current, not host, TSC_AUX on #VMEXIT from SEV-ES guest (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56134,6 +56134,7 @@
 	patches.suse/KVM-SEV-Read-save-fields-from-GHCB-exactly-once.patch
 	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
 	patches.suse/KVM-x86-Add-helper-to-retrieve-current-value-of-user.patch
+	patches.suse/KVM-SVM-Re-load-current-not-host-TSC_AUX-on-VMEXIT-f.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
 	patches.suse/NFSD-Minor-cleanup-in-layoutcommit-processing.patch
