btrfs: do not update last_log_commit when logging inode due to a new name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12965,6 +12965,7 @@
 	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
+	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
