--- a/series.conf
+++ b/series.conf
@@ -12967,6 +12967,7 @@
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
+	patches.suse/btrfs-release-root-after-error-in-data_reloc_print_w.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
