--- a/series.conf
+++ b/series.conf
@@ -13427,7 +13427,7 @@
 	patches.kabi/KVM-VMX-Apply-MMIO-Stale-Data-mitigation-if-KVM-maps.patch
 	patches.kabi/VM-x86-Convert-vcpu_run-s-immediate-exit-param-into.patch
 	patches.kabi/kabi-s390-ap-Unmask-SLCF-bit-in-card-and-queue-ap-functions-sys.patch
-	patches.kabi/kABI-fix-for-struct-devlink_port_attrs-move-new-memb.patch
+	patches.kabi/kABI-devlink-let-driver-opt-out-of-automatic-phys_port_na.patch.
 	patches.kabi/kABI-netfilter-adjust-nftable-sets-ops.patch
 	patches.kabi/mtk_base_afe-kabi-workaround.patch
 	patches.kabi/bluetooth-discovery_state-kabi-workaround.patch
