crypto: iaa - Do not clobber req->base.data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32816,6 +32816,7 @@
 	patches.suse/btrfs-fix-qgroup-reservation-leak-on-failure-to-allo.patch
 	patches.suse/btrfs-fix-invalid-data-space-release-when-truncating.patch
 	patches.suse/btrfs-fix-wrong-start-offset-for-delalloc-space-rele.patch
+	patches.suse/crypto-iaa-Do-not-clobber-req-base.data.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_4xxx.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_420xx.patch
 	patches.suse/crypto-qat-add-shutdown-handler-to-qat_dh895xcc.patch
