--- a/series.conf
+++ b/series.conf
@@ -434,6 +434,7 @@
 	patches.suse/softirq-Use-a-dedicated-thread-for-timer-wakeups-on-PREEMPT_RT.patch
 	patches.suse/irqchip-riscv-aplic-Prevent-crash-when-MSI-domain-is.patch
 	patches.suse/timekeeping-Don-t-use-seqcount-loop-in-ktime_mono_to.patch
+	patches.suse/timekeeping-Add-interfaces-for-handling-timestamps-w.patch
 	patches.suse/timers-Move-sleep-and-timeout-functions-into-a-separate-file.patch
 	patches.suse/timekeeping-Reorder-struct-timekeeper.patch
 	patches.suse/posix-timers-Cure-si_sys_private-race.patch
