- timekeeping: Add percpu counter for tracking floor swap events   (git-fixes). - Refresh   patches.suse/clocksource-Make-negative-motion-detection-more-robust.patch. - Refresh   patches.suse/timekeeping-Always-check-for-negative-motion.patch.

--- a/series.conf
+++ b/series.conf
@@ -435,6 +435,7 @@
 	patches.suse/irqchip-riscv-aplic-Prevent-crash-when-MSI-domain-is.patch
 	patches.suse/timekeeping-Don-t-use-seqcount-loop-in-ktime_mono_to.patch
 	patches.suse/timekeeping-Add-interfaces-for-handling-timestamps-w.patch
+	patches.suse/timekeeping-Add-percpu-counter-for-tracking-floor-sw.patch
 	patches.suse/timers-Move-sleep-and-timeout-functions-into-a-separate-file.patch
 	patches.suse/timekeeping-Reorder-struct-timekeeper.patch
 	patches.suse/posix-timers-Cure-si_sys_private-race.patch
