timekeeping: Don't stop time readers across hard_pps() update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -438,6 +438,7 @@
 	patches.suse/timekeeping-Add-percpu-counter-for-tracking-floor-sw.patch
 	patches.suse/timers-Move-sleep-and-timeout-functions-into-a-separate-file.patch
 	patches.suse/timekeeping-Read-NTP-tick-length-only-once.patch
+	patches.suse/timekeeping-Don-t-stop-time-readers-across-hard_pps-.patch
 	patches.suse/timekeeping-Reorder-struct-timekeeper.patch
 	patches.suse/posix-timers-Cure-si_sys_private-race.patch
 	patches.suse/jiffies-Define-secs_to_jiffies.patch
