- timekeeping: Remove CONFIG_DEBUG_TIMEKEEPING (git-fixes). - blacklist.conf: was blacklisted for kABI reasons

--- a/series.conf
+++ b/series.conf
@@ -444,6 +444,7 @@
 	patches.suse/posix-timers-Cure-si_sys_private-race.patch
 	patches.suse/jiffies-Define-secs_to_jiffies.patch
 	patches.suse/timers-Add-missing-READ_ONCE-in-__run_timer_base.patch
+	patches.suse/timekeeping-Remove-CONFIG_DEBUG_TIMEKEEPING.patch
 	patches.suse/timekeeping-Always-check-for-negative-motion.patch
 	patches.suse/hrtimers-Add-missing-hrtimer_init-trace-points.patch
 	patches.suse/KVM-x86-xen-Initialize-hrtimer-in-kvm_xen_init_vcpu.patch
