--- a/series.conf
+++ b/series.conf
@@ -5757,6 +5757,7 @@
 	patches.suse/drm-i915-dp-fix-the-Adaptive-sync-Operation-mode-for.patch
 	patches.suse/drm-i915-dp-Iterate-DSC-BPP-from-high-to-low-on-all-.patch
 	patches.suse/kbuild-Move-Wenum-enum-conversion-to-W-2.patch
+	patches.suse/futex-Pass-in-task-to-futex_queue.patch
 	patches.suse/sched-fair-Fix-inaccurate-h_nr_runnable-accounting-with-delayed-dequeue.patch
 	patches.suse/sched-debug-Provide-slice-length-for-fair-tasks.patch
 	patches.suse/clocksource-Use-migrate_disable-to-avoid-calling-get_random_u32-in-atomic-context.patch
