- memcg: convert memcg->socket_pressure to u64 (git-fixes). - blacklist.conf: was blacklisted for kABI reasons

--- a/series.conf
+++ b/series.conf
@@ -11598,6 +11598,7 @@
 	patches.suse/mm-ptdump-take-the-memory-hotplug-lock-inside-ptdump_walk_.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/mm-fault-in-complete-folios-instead-of-individual-pa.patch
+	patches.suse/memcg-convert-memcg-socket_pressure-to-u64.patch
 	patches.suse/mm-swap-fix-potential-buffer-overflow-in-setup_clust.patch
 	patches.suse/mm-damon-ops-common-ignore-migration-request-to-inva.patch
 	patches.suse/cgroup-support-to-enable-nmi-safe-css_rstat_updated.patch
