--- a/series.conf
+++ b/series.conf
@@ -3364,6 +3364,7 @@
 	patches.suse/ASoC-SOF-Intel-hda-dai-Do-not-release-the-link-DMA-o.patch
 	patches.suse/ASoC-rt722-add-delay-time-to-wait-for-the-calibratio.patch
 	patches.suse/ASoC-mediatek-disable-buffer-pre-allocation.patch
+	patches.suse/tracing-Constify-string-literal-data-member-in-struc.patch
 	patches.suse/tracing-Prevent-bad-count-for-tracing_cpumask_write.patch
 	patches.suse/stddef-make-__struct_group-UAPI-C-friendly.patch
 	patches.suse/tracing-kprobe-Make-trace_kprobe-s-module-callback-called-.patch
