--- a/series.conf
+++ b/series.conf
@@ -12347,6 +12347,7 @@
 	patches.suse/x86-topology-Implement-topology_is_core_online-to-address-.patch
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
+	patches.suse/init-INITRAMFS_PRESERVE_MTIME-should-depend-on-BLK_D.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
