- ext4: don't explicit update times in ext4_fallocate()   (git-fixes). - blacklist.conf: new SP

--- a/series.conf
+++ b/series.conf
@@ -7543,6 +7543,7 @@
 	patches.suse/dlm-make-tcp-still-work-in-multi-link-env.patch
 	patches.suse/xfs-unmapped-buffer-item-size-straddling-mismatch.patch
 	patches.suse/ext4-remove-writable-userspace-mappings-before-trunc.patch
+	patches.suse/ext4-don-t-explicit-update-times-in-ext4_fallocate.patch
 	patches.suse/ext4-introduce-linear-search-for-dentries.patch
 	patches.suse/ext4-protect-ext4_release_dquot-against-freezing.patch
 	patches.suse/ext4-do-not-convert-the-unwritten-extents-if-data-wr.patch
