nfsd: fix refcount leak in nfsd_set_fh_dentry() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12968,6 +12968,7 @@
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/btrfs-release-root-after-error-in-data_reloc_print_w.patch
+	patches.suse/nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
