--- a/series.conf
+++ b/series.conf
@@ -12970,6 +12970,7 @@
 	patches.suse/btrfs-release-root-after-error-in-data_reloc_print_w.patch
 	patches.suse/nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 	patches.suse/nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-from-supported-attributes.patch
+	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
