NFSD: Skip close replay processing if XDR encoding fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12971,6 +12971,7 @@
 	patches.suse/nfsd-fix-refcount-leak-in-nfsd_set_fh_dentry.patch
 	patches.suse/nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-from-supported-attributes.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
+	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
