NFSD: Never cache a COMPOUND when the SEQUENCE operation fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12972,6 +12972,7 @@
 	patches.suse/nfsd-add-missing-FATTR4_WORD2_CLONE_BLKSIZE-from-supported-attributes.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
 	patches.suse/NFSD-Skip-close-replay-processing-if-XDR-encoding-fails.patch
+	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 
 	# perf/perf-tools-next perf-tools-next
 	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
