NFSD: free copynotify stateid in nfs4_free_ol_stateid() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35000,6 +35000,7 @@
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
+	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
 
 	########################################################
 	# end of sorted patches
