NFSD: Never cache a COMPOUND when the SEQUENCE operation fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35001,6 +35001,7 @@
 	patches.suse/btrfs-do-not-update-last_log_commit-when-logging-ino.patch
 	patches.suse/btrfs-scrub-put-bio-after-errors-in-scrub_raid56_par.patch
 	patches.suse/NFSD-free-copynotify-stateid-in-nfs4_free_ol_stateid.patch
+	patches.suse/NFSD-Never-cache-a-COMPOUND-when-the-SEQUENCE-operation-fails.patch
 
 	########################################################
 	# end of sorted patches
