thermal: intel: int340x: Fix Panther Lake DLVR support (jsc#PED-13980).

--- a/series.conf
+++ b/series.conf
@@ -8627,6 +8627,7 @@
 	patches.suse/cpufreq-amd-pstate-Enable-ITMT-support-after-initializing-core-rankings.patch
 	patches.suse/Documentation-PM-runtime-Fix-a-reference-to-pm_runti.patch
 	patches.suse/thermal-intel-int340x-Add-missing-DVFS-support-flags.patch
+	patches.suse/thermal-intel-int340x-Fix-Panther-Lake-DLVR-support.patch
 	patches.suse/string-Add-load_unaligned_zeropad-code-path-to-sized.patch
 	patches.suse/PCI-MSI-Add-an-option-to-write-MSIX-ENTRY_DATA-befor.patch
 	patches.suse/net-niu-Niu-requires-MSIX-ENTRY_DATA-fields-touch-be.patch
