--- a/series.conf
+++ b/series.conf
@@ -4661,6 +4661,7 @@
 	patches.suse/ACPI-fan-cleanup-resources-in-the-error-path-of-.pro.patch
 	patches.suse/thermal-intel-int340x-processor-Enable-MMIO-RAPL-for.patch
 	patches.suse/ACPI-DPTF-Support-Panther-Lake.patch
+	patches.suse/thermal-intel-int340x-Panther-Lake-DLVR-support.patch
 	patches.suse/HID-wacom-Initialize-brightness-of-LED-trigger.patch
 	patches.suse/Revert-HID-multitouch-Add-support-for-lenovo-Y9000P-.patch
 	patches.suse/HID-multitouch-fix-support-for-Goodix-PID-0x01e9.patch
