--- a/series.conf
+++ b/series.conf
@@ -4662,6 +4662,7 @@
 	patches.suse/thermal-intel-int340x-processor-Enable-MMIO-RAPL-for.patch
 	patches.suse/ACPI-DPTF-Support-Panther-Lake.patch
 	patches.suse/thermal-intel-int340x-Panther-Lake-DLVR-support.patch
+	patches.suse/thermal-intel-int340x-Panther-Lake-power-floor-and-w.patch
 	patches.suse/HID-wacom-Initialize-brightness-of-LED-trigger.patch
 	patches.suse/Revert-HID-multitouch-Add-support-for-lenovo-Y9000P-.patch
 	patches.suse/HID-multitouch-fix-support-for-Goodix-PID-0x01e9.patch
