--- a/series.conf
+++ b/series.conf
@@ -2303,6 +2303,7 @@
 	patches.suse/vdpa-mlx5-Fix-suboptimal-range-on-iotlb-iteration.patch
 	patches.suse/gpio-zevio-Add-missed-label-initialisation.patch
 	patches.suse/gpio-exar-set-value-when-external-pull-up-or-pull-do.patch
+	patches.suse/dmaengine-idxd-Move-DSA-IAA-device-IDs-to-IDXD-drive.patch
 	patches.suse/phy-airoha-Fix-REG_CSR_2L_PLL_CMN_RESERVE0-config-in.patch
 	patches.suse/phy-airoha-Fix-REG_PCIE_PMA_TX_RESET-config-in-airoh.patch
 	patches.suse/phy-airoha-Fix-REG_CSR_2L_JCPLL_SDM_HREN-config-in-a.patch
