dmaengine: idxd: Add a new IAA device ID on Panther Lake family platforms (jsc#PED-13961).

--- a/series.conf
+++ b/series.conf
@@ -5519,6 +5519,7 @@
 	patches.suse/cxl-core-regs-Refactor-out-functions-to-count-regblo.patch
 	patches.suse/Grab-mm-lock-before-grabbing-pt-lock.patch
 	patches.suse/regulator-core-Add-missing-newline-character.patch
+	patches.suse/dmaengine-idxd-Add-a-new-IAA-device-ID-on-Panther-La.patch
 	patches.suse/dmaengine-idxd-Remove-unused-idxd_-un-register_bus_t.patch
 	patches.suse/dmaengine-ti-edma-fix-OF-node-reference-leaks-in-edm.patch
 	patches.suse/dmaengine-idxd-Add-idxd_pci_probe_alloc-helper.patch
