--- a/series.conf
+++ b/series.conf
@@ -3166,6 +3166,7 @@
 	patches.suse/p2sb-Move-P2SB-hide-and-unhide-code-to-p2sb_scan_and.patch
 	patches.suse/p2sb-Do-not-scan-and-remove-the-P2SB-device-when-it-.patch
 	patches.suse/platform-x86-intel-ifs-Add-Clearwater-Forest-to-CPU-suppor.patch
+	patches.suse/platform-x86-intel-vsec-Add-support-for-Panther-Lake.patch
 	patches.suse/firmware-arm_ffa-Fix-the-race-around-setting-ffa_dev.patch
 	patches.suse/xen-netfront-fix-crash-when-removing-device.patch
 	patches.suse/x86-make-get_cpu_vendor-accessible-from-Xen-code.patch
