--- a/series.conf
+++ b/series.conf
@@ -10637,6 +10637,7 @@
 	patches.suse/platform-x86-hp-bioscfg-Fix-class-device-unregistrat.patch
 	patches.suse/platform-x86-think-lmi-Fix-class-device-unregistrati.patch
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-class-device-unregi.patch
+	patches.suse/platform-x86-intel-hid-Add-Wildcat-Lake-support.patch
 	patches.suse/platform-mellanox-mlxreg-lc-Fix-logic-error-in-power.patch
 	patches.suse/platform-x86-think-lmi-Create-ksets-consecutively.patch
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
