--- a/series.conf
+++ b/series.conf
@@ -9273,6 +9273,7 @@
 	patches.suse/crypto-sun8i-ce-undo-runtime-PM-changes-during-drive.patch
 	patches.suse/crypto-marvell-cesa-Handle-zero-length-skcipher-requ.patch
 	patches.suse/crypto-marvell-cesa-Avoid-empty-transfer-descriptor.patch
+	patches.suse/crypto-ccp-Add-support-for-PCI-device-0x17D8.patch
 	patches.suse/crypto-lrw-Only-add-ecb-if-it-is-not-already-there.patch
 	patches.suse/crypto-xts-Only-add-ecb-if-it-is-not-already-there.patch
 	patches.suse/crypto-sun8i-ce-move-fallback-ahash_request-to-the-e.patch
