--- a/series.conf
+++ b/series.conf
@@ -10504,6 +10504,7 @@
 	patches.suse/HID-quirks-Add-quirk-for-2-Chicony-Electronics-HP-5M.patch
 	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
+	patches.suse/hid-intel-ish-hid-Use-PCI_DEVICE_DATA-macro-for-ISH-.patch
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
 	patches.suse/HID-lenovo-Add-support-for-ThinkPad-X1-Tablet-Thin-K.patch
 	patches.suse/ALSA-hda-realtek-Add-quirks-for-some-Clevo-laptops.patch
