HID: intel-ish-hid: ipc: Add Wildcat Lake PCI device ID (jsc#PED-13773).

--- a/series.conf
+++ b/series.conf
@@ -10505,6 +10505,7 @@
 	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
 	patches.suse/hid-intel-ish-hid-Use-PCI_DEVICE_DATA-macro-for-ISH-.patch
+	patches.suse/HID-intel-ish-hid-ipc-Add-Wildcat-Lake-PCI-device-ID.patch
 	patches.suse/HID-wacom-fix-crash-in-wacom_aes_battery_handler.patch
 	patches.suse/HID-lenovo-Add-support-for-ThinkPad-X1-Tablet-Thin-K.patch
 	patches.suse/ALSA-hda-realtek-Add-quirks-for-some-Clevo-laptops.patch
