--- a/series.conf
+++ b/series.conf
@@ -12389,6 +12389,7 @@
 	patches.suse/mmc-core-Fix-variable-shadowing-in-mmc_route_rpmb_fr.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
+	patches.suse/mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI-IDs.patch
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
