PM: Revert "Add EXPORT macros for exporting PM functions" (jsc#jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -5647,6 +5647,7 @@
 	patches.suse/netfilter-nf_tables-reject-mismatching-sum-of-field_len-with-set-key-length.patch
 	patches.suse/cpufreq-s3c64xx-Fix-compilation-warning.patch
 	patches.suse/PM-hibernate-Add-error-handling-for-syscore_suspend.patch
+	patches.suse/PM-Revert-Add-EXPORT-macros-for-exporting-PM-functio.patch
 	patches.suse/PM-sleep-core-Synchronize-runtime-PM-status-of-paren.patch
 	patches.suse/ACPI-x86-Add-skip-i2c-clients-quirk-for-Vexia-EDU-AT.patch
 	patches.suse/perf-trace-Fix-BPF-loading-failure-E2BIG.patch
