--- a/series.conf
+++ b/series.conf
@@ -7027,6 +7027,7 @@
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
+	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/thermal-int340x-Add-NULL-check-for-adev.patch
 	patches.suse/selinux-always-check-the-file-label-in-selinux_kerne.patch
