--- a/series.conf
+++ b/series.conf
@@ -7026,6 +7026,7 @@
 	patches.suse/cpuidle-menu-Update-documentation-after-get_typical_interval-changes.patch
 	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
 	patches.suse/PM-Block-enabling-of-runtime-PM-during-system-suspen.patch
+	patches.suse/PM-runtime-Introduce-pm_runtime_blocked.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
