--- a/series.conf
+++ b/series.conf
@@ -7026,6 +7026,7 @@
 	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
+	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
 	patches.suse/thermal-int340x-Add-NULL-check-for-adev.patch
 	patches.suse/selinux-always-check-the-file-label-in-selinux_kerne.patch
