--- a/series.conf
+++ b/series.conf
@@ -7027,6 +7027,7 @@
 	patches.suse/PM-EM-use-kfree_rcu-to-simplify-the-code.patch
 	patches.suse/PM-Block-enabling-of-runtime-PM-during-system-suspen.patch
 	patches.suse/PM-runtime-Introduce-pm_runtime_blocked.patch
+	patches.suse/PM-sleep-Use-DPM_FLAG_SMART_SUSPEND-conditionally.patch
 	patches.suse/PM-hibernate-Avoid-deadlock-in-hibernate_compressor_.patch
 	patches.suse/PM-sleep-Adjust-check-before-setting-power.must_resu.patch
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
