PM: sleep: Fix bit masking operation (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -7033,6 +7033,7 @@
 	patches.suse/PM-sleep-Rename-power.async_in_progress-to-power.wor.patch
 	patches.suse/PM-sleep-Remove-unused-pm_generic_-wrappers.patch
 	patches.suse/PM-sleep-Fix-handling-devices-with-direct_complete-s.patch
+	patches.suse/PM-sleep-Fix-bit-masking-operation.patch
 	patches.suse/thermal-int340x-Add-NULL-check-for-adev.patch
 	patches.suse/selinux-always-check-the-file-label-in-selinux_kerne.patch
 	patches.suse/selinux-Chain-up-tool-resolving-errors-in-install_po.patch
