soundwire: intel_auxdevice: Fix system suspend/resume handling (jsc#PED-13973).

--- a/series.conf
+++ b/series.conf
@@ -8938,6 +8938,7 @@
 	patches.suse/drm-i915-pxp-fix-undefined-reference-to-intel_pxp_gs.patch
 	patches.suse/drm-amd-display-Fix-slab-use-after-free-in-hdcp.patch
 	patches.suse/drm-amdgpu-Fix-offset-for-HDP-remap-in-nbio-v7.11.patch
+	patches.suse/soundwire-intel_auxdevice-Fix-system-suspend-resume-.patch
 	patches.suse/cpufreq-intel_pstate-Unchecked-MSR-aceess-in-legacy-mode.patch
 	patches.suse/spi-tegra114-Don-t-fail-set_cs_timing-when-delays-ar.patch
 	patches.suse/ALSA-hda-realtek-Enable-speaker-for-HP-platform.patch
