--- a/series.conf
+++ b/series.conf
@@ -5157,6 +5157,7 @@
 	patches.suse/PCI-Add-defines-for-TLP-Header-Prefix-log-sizes.patch
 	patches.suse/PCI-Use-same-names-in-pcie_read_tlp_log-prototype-an.patch
 	patches.suse/PCI-Use-unsigned-int-i-in-pcie_read_tlp_log.patch
+	patches.suse/PCI-Store-number-of-supported-End-End-TLP-Prefixes.patch
 	patches.suse/PCI-Avoid-putting-some-root-ports-into-D3-on-TUXEDO-.patch
 	patches.suse/PCI-switchtec-Add-Microchip-PCI100X-device-IDs.patch
 	patches.suse/PCI-endpoint-Destroy-the-EPC-device-in-devm_pci_epc_.patch
