PCI: Use unsigned int i in pcie_read_tlp_log() (jsc#PED-14215).

--- a/series.conf
+++ b/series.conf
@@ -5156,6 +5156,7 @@
 	patches.suse/PCI-Move-TLP-Log-handling-to-its-own-file.patch
 	patches.suse/PCI-Add-defines-for-TLP-Header-Prefix-log-sizes.patch
 	patches.suse/PCI-Use-same-names-in-pcie_read_tlp_log-prototype-an.patch
+	patches.suse/PCI-Use-unsigned-int-i-in-pcie_read_tlp_log.patch
 	patches.suse/PCI-Avoid-putting-some-root-ports-into-D3-on-TUXEDO-.patch
 	patches.suse/PCI-switchtec-Add-Microchip-PCI100X-device-IDs.patch
 	patches.suse/PCI-endpoint-Destroy-the-EPC-device-in-devm_pci_epc_.patch
