PCI: Use align and resource helpers, and SZ_* in quirk_s3_64M() (jsc#PED-14215).

--- a/series.conf
+++ b/series.conf
@@ -2261,6 +2261,7 @@
 	patches.suse/PCI-pwrctl-Ensure-that-pwrctl-drivers-are-probed-bef.patch
 	patches.suse/PCI-Add-reset_subordinate-to-reset-hierarchy-below-b.patch
 	patches.suse/resource-Add-resource-set-range-and-size-helpers.patch
+	patches.suse/PCI-Use-align-and-resource-helpers-and-SZ_-in-quirk_.patch
 	patches.suse/PCI-Detect-and-trust-built-in-Thunderbolt-chips.patch
 	patches.suse/PCI-Add-TLP-Processing-Hints-TPH-support.patch
 	patches.suse/PCI-TPH-Add-Steering-Tag-support.patch
