PCI/ERR: Handle TLP Log in Flit mode (jsc#PED-14215).

--- a/series.conf
+++ b/series.conf
@@ -7790,6 +7790,7 @@
 	patches.suse/drm-amdgpu-discovery-optionally-use-fw-based-ip-disc.patch
 	patches.suse/PCI-ACS-Fix-pci-config_acs-parameter.patch
 	patches.suse/PCI-Track-Flit-Mode-Status-print-it-with-link-status.patch
+	patches.suse/PCI-ERR-Handle-TLP-Log-in-Flit-mode.patch
 	patches.suse/PCI-ASPM-Fix-link-state-exit-during-switch-upstream-.patch
 	patches.suse/PCI-Fix-wrong-length-of-devres-array.patch
 	patches.suse/PCI-Check-BAR-index-for-validity.patch
