PCI: Use same names in pcie_read_tlp_log() prototype and definition (jsc#PED-14215).

--- a/series.conf
+++ b/series.conf
@@ -5155,6 +5155,7 @@
 	patches.suse/PCI-Don-t-expose-pcie_read_tlp_log-outside-PCI-subsy.patch
 	patches.suse/PCI-Move-TLP-Log-handling-to-its-own-file.patch
 	patches.suse/PCI-Add-defines-for-TLP-Header-Prefix-log-sizes.patch
+	patches.suse/PCI-Use-same-names-in-pcie_read_tlp_log-prototype-an.patch
 	patches.suse/PCI-Avoid-putting-some-root-ports-into-D3-on-TUXEDO-.patch
 	patches.suse/PCI-switchtec-Add-Microchip-PCI100X-device-IDs.patch
 	patches.suse/PCI-endpoint-Destroy-the-EPC-device-in-devm_pci_epc_.patch
