PCI: Don't expose pcie_read_tlp_log() outside PCI subsystem (jsc#PED-14215).

--- a/series.conf
+++ b/series.conf
@@ -5152,6 +5152,7 @@
 	patches.suse/media-nuvoton-Fix-an-error-check-in-npcm_video_ece_i.patch
 	patches.suse/PCI-ASPM-Save-parent-L1SS-config-in-pci_save_aspm_l1.patch
 	patches.suse/PCI-DPC-Quirk-PIO-log-size-for-Intel-Raptor-Lake-P.patch
+	patches.suse/PCI-Don-t-expose-pcie_read_tlp_log-outside-PCI-subsy.patch
 	patches.suse/PCI-Avoid-putting-some-root-ports-into-D3-on-TUXEDO-.patch
 	patches.suse/PCI-switchtec-Add-Microchip-PCI100X-device-IDs.patch
 	patches.suse/PCI-endpoint-Destroy-the-EPC-device-in-devm_pci_epc_.patch
