HID: intel-thc-hid: intel-thc: Add THC interrupt handler (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4691,6 +4691,7 @@
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-APIs-for-interrupt.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-DMA-interfaces.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-LTR-interfaces.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-interrupt-handle.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
