HID: intel-thc-hid: intel-thc: Add THC PIO operation APIs (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4687,6 +4687,7 @@
 	patches.suse/HID-core-Fix-assumption-that-Resolution-Multipliers-.patch
 	patches.suse/HID-intel-thc-hid-Add-basic-THC-driver-skeleton.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-registers-defini.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-PIO-operation-AP.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
