--- a/series.conf
+++ b/series.conf
@@ -4689,6 +4689,7 @@
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-registers-defini.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-PIO-operation-AP.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-APIs-for-interrupt.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-DMA-interfaces.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
