HID: intel-thc-hid: intel-thc: Add THC SPI config interfaces (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4692,6 +4692,7 @@
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-DMA-interfaces.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-LTR-interfaces.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-interrupt-handle.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-SPI-config-inter.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
