--- a/series.conf
+++ b/series.conf
@@ -4700,6 +4700,7 @@
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-THC-QuickSPI-AC.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-HIDSPI-protocol.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Complete-THC-QuickS.patch
+	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-PM-implementati.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
