Hid: Intel-thc-hid: Intel-thc: Fix "dubious: !x | !y" issue (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -7162,6 +7162,7 @@
 	patches.suse/platform-x86-x86-android-tablets-Add-select-POWER_SU.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
+	patches.suse/Hid-Intel-thc-hid-Intel-thc-Fix-dubious-x-y-issue.patch
 	patches.suse/HID-pidff-Convert-infinite-length-from-Linux-API-to-.patch
 	patches.suse/HID-pidff-Do-not-send-effect-envelope-if-it-s-empty.patch
 	patches.suse/HID-pidff-Clamp-PERIODIC-effect-period-to-device-s-l.patch
