--- a/series.conf
+++ b/series.conf
@@ -7161,6 +7161,7 @@
 	patches.suse/platform-x86-dell-ddv-Fix-temperature-calculation.patch
 	patches.suse/platform-x86-x86-android-tablets-Add-select-POWER_SU.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
+	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
 	patches.suse/HID-pidff-Convert-infinite-length-from-Linux-API-to-.patch
 	patches.suse/HID-pidff-Do-not-send-effect-envelope-if-it-s-empty.patch
 	patches.suse/HID-pidff-Clamp-PERIODIC-effect-period-to-device-s-l.patch
