HID: Intel-thc-hid: Intel-quickspi: Correct device state names gramatically (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -7163,6 +7163,7 @@
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-intel-thc-hid-Remove-deprecated-PCI-API-calls.patch
 	patches.suse/Hid-Intel-thc-hid-Intel-thc-Fix-dubious-x-y-issue.patch
+	patches.suse/HID-Intel-thc-hid-Intel-quickspi-Correct-device-stat-f97455f.patch
 	patches.suse/HID-pidff-Convert-infinite-length-from-Linux-API-to-.patch
 	patches.suse/HID-pidff-Do-not-send-effect-envelope-if-it-s-empty.patch
 	patches.suse/HID-pidff-Clamp-PERIODIC-effect-period-to-device-s-l.patch
