HID: intel-thc-hid: intel-quickspi: Add THC QuickSPI ACPI interfaces (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4697,6 +4697,7 @@
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-I2C-config-inter.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-THC-QuickSPI-dr.patch
 	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-THC-QuickSPI-dr-4751113.patch
+	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-THC-QuickSPI-AC.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
