HID: intel-thc-hid: fix build errors in um mode (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4709,6 +4709,7 @@
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-PM-implementati.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Fix-error-code-in-thc_i2.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-fix-potential-memor.patch
+	patches.suse/HID-intel-thc-hid-fix-build-errors-in-um-mode.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
