docs: hid: Fix typo in intel-thc-hid.rst (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -9421,6 +9421,7 @@
 	patches.suse/svsm-Add-header-with-SVSM_VTPM_CMD-helpers
 	patches.suse/tpm-Add-SNP-SVSM-vTPM-driver
 	patches.suse/x86-sev-Register-tpm-svsm-platform-device
+	patches.suse/docs-hid-Fix-typo-in-intel-thc-hid.rst.patch
 	patches.suse/Documentation-rtla-Fix-duplicate-text-about-timerlat.patch
 	patches.suse/Documentation-rtla-Fix-typo-in-rtla-timerlat.rst.patch
 	patches.suse/Documentation-rtla-Fix-typo-in-common_timerlat_descr.patch
