--- a/series.conf
+++ b/series.conf
@@ -10088,6 +10088,7 @@
 	patches.suse/hwmon-asus-ec-sensors-check-sensor-index-in-read_str.patch
 	patches.suse/HID-usbhid-Eliminate-recurrent-out-of-bounds-bug-in-.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-pass-correct-argume.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-make-read-only-arrays-st.patch
 	patches.suse/mfd-exynos-lpass-Fix-an-error-handling-path-in-exyno.patch
 	patches.suse/mfd-exynos-lpass-Avoid-calling-exynos_lpass_disable-.patch
 	patches.suse/mfd-exynos-lpass-Fix-another-error-handling-path-in-.patch
