HID: THC: Add documentation (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4685,6 +4685,7 @@
 	patches.suse/HID-hid-steam-Make-sure-rumble-work-is-canceled-on-r.patch
 	patches.suse/HID-hid-asus-Disable-OOBE-mode-on-the-ProArt-P16.patch
 	patches.suse/HID-core-Fix-assumption-that-Resolution-Multipliers-.patch
+	patches.suse/HID-THC-Add-documentation.patch
 	patches.suse/HID-intel-thc-hid-Add-basic-THC-driver-skeleton.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-registers-defini.patch
 	patches.suse/HID-intel-thc-hid-intel-thc-Add-THC-PIO-operation-AP.patch
