--- a/series.conf
+++ b/series.conf
@@ -11682,6 +11682,7 @@
 	patches.suse/HID-core-Harden-s32ton-against-conversion-to-0-bits.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Add-thc_dma_content-into.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Refine-code-comments.patch
+	patches.suse/HID-Intel-thc-hid-Intel-thc-Introduce-max-input-size.patch
 	patches.suse/power-supply-qcom_battmgr-Add-lithium-polymer-entry.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
