HID: Intel-thc-hid: Intel-quicki2c: Enhance QuickI2C reset flow (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -10563,6 +10563,7 @@
 	patches.suse/HID-wacom-fix-memory-leak-on-sysfs-attribute-creatio.patch
 	patches.suse/HID-wacom-fix-kobject-reference-count-leak.patch
 	patches.suse/HID-nintendo-avoid-bluetooth-suspend-resume-stalls.patch
+	patches.suse/HID-Intel-thc-hid-Intel-quicki2c-Enhance-QuickI2C-re.patch
 	patches.suse/HID-quirks-Add-quirk-for-2-Chicony-Electronics-HP-5M.patch
 	patches.suse/HID-Add-IGNORE-quirk-for-SMARTLINKTECHNOLOGY.patch
 	patches.suse/HID-lenovo-Restrict-F7-9-11-mode-to-compact-keyboard.patch
