HID: intel-thc-hid: intel-quicki2c: Complete THC QuickI2C driver (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -4705,6 +4705,7 @@
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-THC-QuickI2C-dr-ba38d7f.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-THC-QuickI2C-AC.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-HIDI2C-protocol.patch
+	patches.suse/HID-intel-thc-hid-intel-quicki2c-Complete-THC-QuickI.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
