HID: intel-thc-hid: Fix spelling mistake "intput" -> "input" (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -6298,6 +6298,7 @@
 	patches.suse/HID-apple-disable-Fn-key-handling-on-the-Omoton-KB06.patch
 	patches.suse/HID-appleir-Fix-potential-NULL-dereference-at-raw-ev.patch
 	patches.suse/HID-hid-steam-Fix-use-after-free-when-detaching-devi.patch
+	patches.suse/HID-intel-thc-hid-Fix-spelling-mistake-intput-input.patch
 	patches.suse/exfat-fix-just-enough-dentries-but-allocate-a-new-cluster-to-dir.patch
 	patches.suse/exfat-fix-soft-lockup-in-exfat_clear_bitmap.patch
 	patches.suse/exfat-short-circuit-zero-byte-writes-in-exfat_file_write_iter.patch
