HID: Intel-thc-hid: Intel-quicki2c: Refine code comments (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -11684,6 +11684,7 @@
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Refine-code-comments.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Introduce-max-input-size.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Introduce-interrupt-dela.patch
+	patches.suse/HID-Intel-thc-hid-Intel-quicki2c-Refine-code-comment.patch
 	patches.suse/power-supply-qcom_battmgr-Add-lithium-polymer-entry.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
