--- a/series.conf
+++ b/series.conf
@@ -4707,6 +4707,7 @@
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-HIDI2C-protocol.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Complete-THC-QuickI.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-PM-implementati.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Fix-error-code-in-thc_i2.patch
 	patches.suse/HID-Wacom-Add-PCI-Wacom-device-support.patch
 	patches.suse/Input-xpad-add-support-for-Nacon-Pro-Compact.patch
 	patches.suse/Input-bbnsm_pwrkey-add-remove-hook.patch
