HID: Intel-thc-hid: Intel-quickspi: Correct device state after S4 (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -6299,6 +6299,7 @@
 	patches.suse/HID-appleir-Fix-potential-NULL-dereference-at-raw-ev.patch
 	patches.suse/HID-hid-steam-Fix-use-after-free-when-detaching-devi.patch
 	patches.suse/HID-intel-thc-hid-Fix-spelling-mistake-intput-input.patch
+	patches.suse/HID-Intel-thc-hid-Intel-quickspi-Correct-device-stat.patch
 	patches.suse/exfat-fix-just-enough-dentries-but-allocate-a-new-cluster-to-dir.patch
 	patches.suse/exfat-fix-soft-lockup-in-exfat_clear_bitmap.patch
 	patches.suse/exfat-short-circuit-zero-byte-writes-in-exfat_file_write_iter.patch
