--- a/series.conf
+++ b/series.conf
@@ -12938,6 +12938,7 @@
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Fix-wrong-type-cast.patch
+	patches.suse/HID-intel-thc-hid-Intel-quickspi-switch-first-interr.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
