HID: intel-thc-hid: intel-quicki2c: Fix ACPI dsd ICRS/ISUB length (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -12142,6 +12142,7 @@
 	patches.suse/drm-msm-update-the-high-bitfield-of-certain-DSI-regi.patch
 	patches.suse/drm-mediatek-Add-error-handling-for-old-state-CRTC-i.patch
 	patches.suse/drm-mediatek-Fix-device-node-reference-count-leaks-i.patch
+	patches.suse/HID-intel-thc-hid-intel-quicki2c-Fix-ACPI-dsd-ICRS-I.patch
 	patches.suse/HID-multitouch-fix-slab-out-of-bounds-access-in-mt_r.patch
 	patches.suse/HID-wacom-Add-a-new-Art-Pen-2.patch
 	patches.suse/hid-fix-I2C-read-buffer-overflow-in-raw_event-for-mc.patch
