HID: intel-thc-hid: intel-quickspi: Add ARL PCI Device Id's (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -12939,6 +12939,7 @@
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Fix-wrong-type-cast.patch
 	patches.suse/HID-intel-thc-hid-Intel-quickspi-switch-first-interr.patch
+	patches.suse/HID-intel-thc-hid-intel-quickspi-Add-ARL-PCI-Device-.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/x86-resctrl-Fix-miscount-of-bandwidth-event-when-reactivat.patch
