HID: intel-thc-hid: intel-quicki2c: Add WCL Device IDs (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -12390,6 +12390,7 @@
 	patches.suse/iommu-amd-Fix-alias-device-DTE-setting.patch
 	patches.suse/firewire-core-fix-overlooked-update-of-subsystem-ABI.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
+	patches.suse/HID-intel-thc-hid-intel-quicki2c-Add-WCL-Device-IDs.patch
 	patches.suse/HID-asus-add-support-for-missing-PX-series-fn-keys.patch
 	patches.suse/HID-amd_sfh-Add-sync-across-amd-sfh-work-functions.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
