HID: intel-thc-hid: intel-quicki2c: support ACPI config for advanced features (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -12729,6 +12729,7 @@
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Use-str_true_false-helpe.patch
+	patches.suse/HID-intel-thc-hid-intel-quicki2c-support-ACPI-config.patch
 	patches.suse/mtd-rawnand-fsmc-Default-to-autodetect-buswidth.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
