--- a/series.conf
+++ b/series.conf
@@ -11688,6 +11688,7 @@
 	patches.suse/HID-Intel-thc-hid-Intel-quicki2c-Add-driver-data-sup.patch
 	patches.suse/HID-Intel-thc-hid-Intel-quicki2c-Add-two-new-feature.patch
 	patches.suse/HID-Intel-thc-hid-Intel-thc-Add-Wake-on-Touch-suppor.patch
+	patches.suse/HID-Intel-thc-hid-Intel-quickspi-Enable-Wake-on-Touc.patch
 	patches.suse/power-supply-qcom_battmgr-Add-lithium-polymer-entry.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
