HID: intel-thc-hid: Intel-quicki2c: Enhance driver re-install flow (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -12149,6 +12149,7 @@
 	patches.suse/hid-fix-I2C-read-buffer-overflow-in-raw_event-for-mc.patch
 	patches.suse/HID-asus-fix-UAF-via-HID_CLAIMED_INPUT-validation.patch
 	patches.suse/HID-hid-ntrig-fix-unable-to-handle-page-fault-in-ntr.patch
+	patches.suse/HID-intel-thc-hid-Intel-quicki2c-Enhance-driver-re-i.patch
 	patches.suse/HID-input-rename-hidinput_set_battery_charge_status.patch
 	patches.suse/HID-input-report-battery-status-changes-immediately.patch
 	patches.suse/HID-logitech-Add-ids-for-G-PRO-2-LIGHTSPEED.patch
