--- a/series.conf
+++ b/series.conf
@@ -12143,6 +12143,7 @@
 	patches.suse/drm-mediatek-Add-error-handling-for-old-state-CRTC-i.patch
 	patches.suse/drm-mediatek-Fix-device-node-reference-count-leaks-i.patch
 	patches.suse/HID-intel-thc-hid-intel-quicki2c-Fix-ACPI-dsd-ICRS-I.patch
+	patches.suse/HID-intel-thc-hid-intel-thc-Fix-incorrect-pointer-ar.patch
 	patches.suse/HID-multitouch-fix-slab-out-of-bounds-access-in-mt_r.patch
 	patches.suse/HID-wacom-Add-a-new-Art-Pen-2.patch
 	patches.suse/hid-fix-I2C-read-buffer-overflow-in-raw_event-for-mc.patch
