HID: intel-thc-hid: Separate max input size control conditional list (jsc#PED-14033).

--- a/series.conf
+++ b/series.conf
@@ -11691,6 +11691,7 @@
 	patches.suse/HID-Intel-thc-hid-Intel-quickspi-Enable-Wake-on-Touc.patch
 	patches.suse/HID-Intel-thc-hid-Intel-quicki2c-Enable-Wake-on-Touc.patch
 	patches.suse/HID-intel-thc-make-ptl_ddata-static.patch
+	patches.suse/HID-intel-thc-hid-Separate-max-input-size-control-co.patch
 	patches.suse/power-supply-qcom_battmgr-Add-lithium-polymer-entry.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
