Update config files: enable CONFIG_INTEL_THC_HID and co (jsc#PED-14033)
Add intel-thc, intel-quicki2c and intel-quickspi modules as supported, too

--- a/supported.conf
+++ b/supported.conf
@@ -1349,6 +1349,9 @@
 				drivers/hid/intel-ish-hid/intel-ishtp
 				drivers/hid/intel-ish-hid/intel-ishtp-hid
 -				drivers/hid/intel-ish-hid/intel-ishtp-loader
+				drivers/hid/intel-thc-hid/intel-quicki2c
+				drivers/hid/intel-thc-hid/intel-quickspi
+				drivers/hid/intel-thc-hid/intel-thc
 -!optional			drivers/hid/surface-hid/surface_hid
 -!optional			drivers/hid/surface-hid/surface_hid_core
 -!optional			drivers/hid/surface-hid/surface_kbd
