platform/x86/intel/vsec: Create wrapper to walk PCI config space (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -11158,6 +11158,7 @@
 	patches.suse/spi-stm32-Check-for-cfg-availability-in-stm32_spi_pr.patch
 	patches.suse/pwm-rockchip-Round-period-duty-down-on-apply-up-on-g.patch
 	patches.suse/platform-x86-intel-vsec-Add-private-data-for-per-dev.patch
+	patches.suse/platform-x86-intel-vsec-Create-wrapper-to-walk-PCI-c.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
