--- a/series.conf
+++ b/series.conf
@@ -4834,6 +4834,7 @@
 	patches.suse/platform-x86-serdev_helpers-Check-for-serial_ctrl_ui.patch
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
 	patches.suse/platform-x86-acer-wmi-Add-support-for-Acer-PH14-51.patch
+	patches.suse/platform-x86-intel-pmt-Constify-struct-bin_attribute.patch
 	patches.suse/platform-x86-amd-hsmp-Constify-struct-bin_attribute.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
