platform/x86/intel/pmt: Correct the typo 'ACCCESS_LOCAL' (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -602,6 +602,7 @@
 	patches.suse/MAINTAINERS-update-location-of-media-main-tree.patch
 	patches.suse/docs-media-update-location-of-the-media-patches.patch
 	patches.suse/media-uvcvideo-Skip-parsing-frames-of-type-UVC_VS_UN.patch
+	patches.suse/platform-x86-intel-pmt-Correct-the-typo-ACCCESS_LOCA.patch
 	patches.suse/platform-x86-intel-pmc-Disable-C1-auto-demotion-during-suspend.patch
 	patches.suse/platform-x86-amd-hsmp-Create-hsmp-directory.patch
 	patches.suse/platform-x86-amd-hsmp-Create-wrapper-function-init_acpi.patch
