--- a/series.conf
+++ b/series.conf
@@ -615,6 +615,7 @@
 	patches.suse/platform-x86-amd-hsmp-Use-name-space-while-exporting-modul.patch
 	patches.suse/platform-x86-amd-hsmp-Use-dev_groups-in-the-driver-structu.patch
 	patches.suse/platform-x86-amd-hsmp-Make-hsmp_pdev-static-instead-of-glo.patch
+	patches.suse/platform-x86-intel-Add-intel-prefix-to-the-modules-a.patch
 	patches.suse/platform-x86-amd-pmf-Switch-to-platform_get_resource.patch
 	patches.suse/platform-x86-asus-wmi-Fix-inconsistent-use-of-therma.patch
 	patches.suse/platform-x86-amd-hsmp-mark-hsmp_msg_desc_table-as-maybe_un.patch
