platform/x86/intel-uncore-freq: avoid non-literal format string (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -10436,6 +10436,7 @@
 	patches.suse/platform-x86-amd-pmf-Prevent-amd_pmf_tee_deinit-from.patch
 	patches.suse/platform-x86-dell_rbu-Fix-list-usage.patch
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
+	patches.suse/platform-x86-intel-uncore-freq-avoid-non-literal-for.patch
 	patches.suse/platform-x86-amd-pmc-Add-PCSpecialist-Lafite-Pro-V-1.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/ata-pata_cs5536-fix-build-on-32-bit-UML.patch
