platform/x86/intel/pmt: white space cleanup (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -11175,6 +11175,7 @@
 	patches.suse/platform-x86-intel-pmt-fix-build-dependency-for-kuni.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
+	patches.suse/platform-x86-intel-pmt-white-space-cleanup.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
 	patches.suse/platform-chrome-cros_ec_sensorhub-Retries-when-a-sen.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
