platform/x86/intel/pmt: fix build dependency for kunit test (jsc#PED-14188).

--- a/series.conf
+++ b/series.conf
@@ -11172,6 +11172,7 @@
 	patches.suse/platform-x86-intel-pmt-KUNIT-test-for-PMT-Enhanced-D.patch
 	patches.suse/platform-x86-intel-pmt-discovery-Fix-size_t-specifie.patch
 	patches.suse/platform-x86-intel-pmt-discovery-fix-format-string-w.patch
+	patches.suse/platform-x86-intel-pmt-fix-build-dependency-for-kuni.patch
 	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Yoga-6-13ALC6-to-pmc.patch
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
