--- a/series.conf
+++ b/series.conf
@@ -11184,6 +11184,7 @@
 	patches.suse/platform-x86-intel-pmt-add-register-access-helpers.patch
 	patches.suse/platform-x86-intel-pmt-refactor-base-parameter.patch
 	patches.suse/platform-x86-intel-pmt-use-a-version-struct.patch
+	patches.suse/platform-x86-intel-pmt-support-BMG-crashlog.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
 	patches.suse/platform-chrome-cros_ec_sensorhub-Retries-when-a-sen.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
