--- a/series.conf
+++ b/series.conf
@@ -11177,6 +11177,7 @@
 	patches.suse/platform-x86-intel-pmt-fix-a-crashlog-NULL-pointer-a.patch
 	patches.suse/platform-x86-intel-pmt-white-space-cleanup.patch
 	patches.suse/platform-x86-intel-pmt-mutex-clean-up.patch
+	patches.suse/platform-x86-intel-pmt-use-guard-mutex.patch
 	patches.suse/platform-chrome-cros_ec_typec-Defer-probe-on-missing.patch
 	patches.suse/platform-chrome-cros_ec_sensorhub-Retries-when-a-sen.patch
 	patches.suse/platform-chrome-cros_ec-Unregister-notifier-in-cros_.patch
